--- a/content/_data/publication.yaml
+++ b/content/_data/publication.yaml
@@ -25,7 +25,7 @@ description:
 # Publication Details
 # ------------------------------------------------------------------------------
 
-pub_date: 2019-03-01 # YYYY-MM-DD
+pub_date:  # YYYY-MM-DD
 language: en
 pub_type: book # book | journal-periodical | other
 
@@ -43,42 +43,42 @@ publisher:
 # Contributors
 # ------------------------------------------------------------------------------
 
-contributor_as_it_appears: Edited by Judith Keller, featuring photographs by Dorothea Lange and Walker Evans
+contributor_as_it_appears:
 
 contributor:
-  - id: jkeller
-    type: primary
-    first_name: Judith
-    last_name: Keller
-    title: Senior Curator of Photographs
-    affiliation: J. Paul Getty Museum
-    bio: "Judith Keller joined the J. Paul Getty Museum in 1986 and since 2008 was an Associate Curator of Photographs. In 2010, she was named the Senior Curator of Photographs. Keller received her B.A. in Art History and a Masters in Museum Practice and Art History from the University of Michigan at Ann Arbor. She also completed course work for a Phd. in Art History at the University of Michigan. Prior to her tenure at the Getty, Keller worked at The University of Michigan Museum of Art (1979 – 1981) and at the Archer M. Huntington Art Gallery (now the Blanton Museum of Art) at The University of Texas, Austin, as Curator of Prints and Drawings."
-    url: https://news.getty.edu/judith-keller-named-senior-curator-photographs-at-j-paul-getty-museum.htm
-    pic: contributors/judith-keller.jpg
-  - id: dlange
-    type: secondary
-    first_name: Dorothea
-    last_name: Lange
-    title: Photographer
-    affiliation: Farm Security Administration
-    bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    url: https://en.wikipedia.org/wiki/Dorothea_Lange
-    pic: figures/lange.jpg
-  - id: wevans
-    type: secondary
-    first_name: Walker
-    last_name: Evans
-    title: Photograher
-    affiliation: Farm Security Administration
-    bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    url: https://en.wikipedia.org/wiki/Walker_Evans
-    pic: figures/evans.jpg
+  - id:
+    type:
+    first_name:
+    last_name:
+    title:
+    affiliation:
+    bio:
+    url:
+    pic:
+  - id:
+    type:
+    first_name:
+    last_name:
+    title:
+    affiliation:
+    bio:
+    url:
+    pic:
+  - id:
+    type:
+    first_name:
+    last_name:
+    title:
+    affiliation:
+    bio:
+    url:
+    pic:
 
 # ------------------------------------------------------------------------------
 # Copright & License
 # ------------------------------------------------------------------------------
 
-copyright: © 2017 J. Paul Getty Trust
+copyright:
 
 license:
   name: Creative Commons Attribution 4.0 International License
@@ -101,11 +101,6 @@ resource_link:
     media_type: application/epub+zip
     link_relation: alternate
     url: /downloads/output.epub
-  - type: other-format
-    name: Kindle/MOBI
-    media_type: vnd.amazon.mobi8-ebook
-    link_relation: alternate
-    url: /downloads/output.mobi
   - type: footer-link
     name: About
     link_relation: about
@@ -124,23 +119,23 @@ resource_link:
 # ------------------------------------------------------------------------------
 
 subject:
-  - type: bisac
-    name: PHOTOGRAPHY / Subjects & Themes / Historical
-    identifer: PHO023100
-  - type: getty
-    name: Dorothea Lange
-    identifier: "https://vocab.getty.edu/ulan/500007674"
-  - type: keyword
-    name: photography
-  - type: getty
-    name: Walker Evans
-    identifier: "https://vocab.getty.edu/ulan/500012076"
-  - type: getty
-    name: black-and-white photography
-    identifier: "https://vocab.getty.edu/aat/300162056"
-  - type: getty
-    name: despression (economic concept)
-    identifier: "https://vocab.getty.edu/aat/300410245"
+  - type:
+    name:
+    identifer:
+  - type:
+    name:
+    identifier:
+  - type:
+    name:
+  - type:
+    name:
+    identifier:
+  - type:
+    name:
+    identifier:
+  - type:
+    name:
+    identifier:
 
 # ------------------------------------------------------------------------------
 # Revision History
@@ -156,4 +151,4 @@ repository_url:
 # Promo Image
 # ------------------------------------------------------------------------------
 
-promo_image: cover.png
+promo_image:
