--- a/content/_data/publication.yaml
+++ b/content/_data/publication.yaml
@@ -16,7 +16,7 @@ short_title:
 
 description:
   one_line:
-  full: >-
+  full: |
     In 2019 Yale University, with the support of the Getty Foundation, held an international conference, where nearly four hundred attendees from more than twenty countries gathered to discuss a vital topic: how best to conserve paintings on canvas. It was the first major symposium on the subject since 1974, when wax-resin and glue-paste lining reigned as the predominant conservation techniques. Over the past fifty years, such methods, which were often destructive to artworks, have become less widely used in favor of more minimalist approaches to intervention. More recent decades have witnessed the reevaluation of traditional practices as well as focused research supporting significant new methodologies, procedures, and synthetic materials for the care and conservation of paintings on fabric supports.
 
     Conserving Canvas compiles the proceedings of the conference, presenting a wide array of papers and posters that provide important global perspectives on the history, current state, and future needs of the field. Featuring an expansive glossary of terms that will be an invaluable resource for conservators and other practitioners, this publication promises to become a standard reference for the international conservation community.
@@ -25,16 +25,16 @@ description:
 # Publication Details
 # ------------------------------------------------------------------------------
 
-pub_date: 2019-03-01 # YYYY-MM-DD
+pub_date: 2023-07-25 # YYYY-MM-DD
 language: en
 pub_type: book # book | journal-periodical | other
 
 identifier:
-  isbn:
-  url:
+  isbn: "978-1-60606-825-0"
+  url: "https://www.getty.edu/publications/conserving-canvas"
 
 publisher:
-  - name: J. Paul Getty Trust
+  - name: Getty Conservation Institute
     location: Los Angeles
     url:
     logo: logo-getty.png
@@ -43,42 +43,28 @@ publisher:
 # Contributors
 # ------------------------------------------------------------------------------
 
-contributor_as_it_appears: Edited by Judith Keller, featuring photographs by Dorothea Lange and Walker Evans
+contributor_as_it_appears: "Edited by Cynthia Schwarz, Ian McClure, and Jim Coddington"
 
 contributor:
-  - id: jkeller
-    type: primary
-    first_name: Judith
-    last_name: Keller
-    title: Senior Curator of Photographs
-    affiliation: J. Paul Getty Museum
-    bio: "Judith Keller joined the J. Paul Getty Museum in 1986 and since 2008 was an Associate Curator of Photographs. In 2010, she was named the Senior Curator of Photographs. Keller received her B.A. in Art History and a Masters in Museum Practice and Art History from the University of Michigan at Ann Arbor. She also completed course work for a Phd. in Art History at the University of Michigan. Prior to her tenure at the Getty, Keller worked at The University of Michigan Museum of Art (1979 – 1981) and at the Archer M. Huntington Art Gallery (now the Blanton Museum of Art) at The University of Texas, Austin, as Curator of Prints and Drawings."
-    url: https://news.getty.edu/judith-keller-named-senior-curator-photographs-at-j-paul-getty-museum.htm
-    pic: contributors/judith-keller.jpg
-  - id: dlange
-    type: secondary
-    first_name: Dorothea
-    last_name: Lange
-    title: Photographer
-    affiliation: Farm Security Administration
-    bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    url: https://en.wikipedia.org/wiki/Dorothea_Lange
-    pic: figures/lange.jpg
-  - id: wevans
-    type: secondary
-    first_name: Walker
-    last_name: Evans
-    title: Photograher
-    affiliation: Farm Security Administration
-    bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    url: https://en.wikipedia.org/wiki/Walker_Evans
-    pic: figures/evans.jpg
+  - id: "cschwarz"
+    first_name: "Cynthia"
+    last_name: "Schwarz"
+    bio: "Cynthia Schwarz is senior associate conservator Yale University Art Gallery."
+  - id: "imcclure"
+    first_name: "Ian"
+    last_name: "McClure"
+    bio: "Ian McClure was formerly senior director of the Institute for the Preservation of Cultural Heritage and the Susan Morse Hilles Chief Conservator, Yale University Art Gallery."
+  - id: "jcoddington"
+    first_name: "Jim"
+    last_name: "Coddington"
+    bio: "Jim Coddington is retired chief conservator, Museum of Modern Art, New York."
+
 
 # ------------------------------------------------------------------------------
 # Copright & License
 # ------------------------------------------------------------------------------
 
-copyright: © 2017 J. Paul Getty Trust
+copyright: © 2023 J. Paul Getty Trust
 
 license:
   name: Creative Commons Attribution 4.0 International License
@@ -101,11 +87,6 @@ resource_link:
     media_type: application/epub+zip
     link_relation: alternate
     url: /downloads/output.epub
-  - type: other-format
-    name: Kindle/MOBI
-    media_type: vnd.amazon.mobi8-ebook
-    link_relation: alternate
-    url: /downloads/output.mobi
   - type: footer-link
     name: About
     link_relation: about
@@ -124,23 +105,23 @@ resource_link:
 # ------------------------------------------------------------------------------
 
 subject:
-  - type: bisac
-    name: PHOTOGRAPHY / Subjects & Themes / Historical
-    identifer: PHO023100
-  - type: getty
-    name: Dorothea Lange
-    identifier: "https://vocab.getty.edu/ulan/500007674"
-  - type: keyword
-    name: photography
-  - type: getty
-    name: Walker Evans
-    identifier: "https://vocab.getty.edu/ulan/500012076"
-  - type: getty
-    name: black-and-white photography
-    identifier: "https://vocab.getty.edu/aat/300162056"
-  - type: getty
-    name: despression (economic concept)
-    identifier: "https://vocab.getty.edu/aat/300410245"
+  - type:
+    name:
+    identifer:
+  - type:
+    name:
+    identifier:
+  - type:
+    name:
+  - type:
+    name:
+    identifier:
+  - type:
+    name:
+    identifier:
+  - type:
+    name:
+    identifier:
 
 # ------------------------------------------------------------------------------
 # Revision History
