Fix yaml validation error

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1165,7 +1165,7 @@ entries:
   - id: "Schiessl 1983"
     full: "Schiessl, Ulrich 1983. “Das Leinwandgemälde auf der starren Platte.” *Maltechnik Restauro* 89, no. 4: 233–49."
   - id: "Schlotter 2009"
-    full: Schlotter, A. 2009. *Het plafondstuk op doek uit de Grote Zaal van Huys Amerongen & Onderzoek naar het bedoeken van een plafondstuk*. SRAL archives, unpublished treatment report.
+    full: "Schlotter, A. 2009. *Het plafondstuk op doek uit de Grote Zaal van Huys Amerongen & Onderzoek naar het bedoeken van een plafondstuk*. SRAL archives, unpublished treatment report."
   - id: "Schneider 2021"
     full: "Schneider, A., ed. 2021. *Michael Armitage, Paradise Edict*. Exhibition catalogue, Haus Der Kunst. Cologne: Verlag der Buchhandlung Walther und Franz König; Munich: Haus der Kunst."
   - id: "Schwartz and Kossmann 1998"
