--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,6 @@ _temp/
 # EleventFetch cache directory
 .cache
 
-# environment variables file
-.env
-.env.*
-!.env.example
-
 # ESLint cache directory
 .eslintcache
 
@@ -24,6 +19,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# System files
+**/*/.DS_Store
+
 # npm cache directory
 .npm
 
@@ -35,7 +33,3 @@ pids
 
 # Local Netlify folder
 .netlify
-
-
-# macOS File
-.DS_Store
