--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -665,7 +665,10 @@ figure_list:
     caption: "Room housing large paintings in the Kunsthistorisches Museum’s central storage, installed in 2011."
     credit: "Image: © KHM Museumsverband"
 
-  - id: "14.2 "
+  - id: "fig-14-2"
+    src: "figures/fig-14-2.jpg"
+    zoom: true 
+    label: "Figure 14.2"
     caption: "Titian (Italian, ca. 1488–1576), *Ecce Homo*, 1543. Oil on canvas, 242 x 361 cm (95 1/3 x 142 1/8 in.). Vienna, Kunsthistorisches Museum, GG 73. Detail from the reverse during structural stabilization. Prior to strip-lining, localized areas of damage to the eighteenth-century lining canvas were repaired."
     credit: "Image: © KHM Museumsverband"
 
