Add citations that include page ranges

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1280,7 +1280,7 @@ entries:
     full: "Tiozzo, V. 2000. *Dal decalogo Edwards alla carta del restauro.* Saonara: Il Prato."
   - id: "Torah et al. 2018"
     full: "Torah, Russel, Jake Lawrie-Ashton, Yi Li, Sasikumar Arumugam, Henry A. Sodano, and Steve Beeby. 2018. “Energy-Harvesting Materials for Smart Fabrics and Textiles.” *MRS Bulletin* 43, no. 3: 214–19."
-  - id:
+  - id: "Toriumi 2018"
     full: "Toriumi, Hidemi. 2018. “Development of Cleaning Method for Paintings in Europe and the United States Since the 1980s.” In *The Japan Society for the Conservation of Cultural Property 40th Conference Preprints, Kyoto (Japan), 16–17 June 2018*, 280–81. [TK publication info]"
   - id: "Townsend et al. 2008"
     full: "Townsend, J., T. Doherty, G. Heydenreich, and J. Ridge, eds. 2008. *Preparation for Painting: The Artist’s Choice and Its Consequences*. London: Archetype."
