Add remaining cite shortcodes

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -912,7 +912,7 @@ entries:
     full: "Muhammad Sayem, Abu S., Siew Hon Teay, Hasan Shahariar, Paula Luise Fink, and Alhussein Albarbar. 2020. “Review on Smart Electro-Clothing Systems (SeCSs).” *Sensors 20, no. 3:* 587."
   - id: "Muñoz Vinas 2005"
     full: "Muñoz Vinas, S. 2005. *Contemporary Theory of Conservation.* Butterworth-Heinemann."
-  - id: "Mureșan and Șt. Szemkovics"
+  - id: "Mureșan and L-Șt. Szemkovics 2018"
     full: "Mureșan, Augustin, and L-Șt. Szemkovics. 2018. *Bibliografia vexilologiei românești.* Arad, Romania: Vasile Goldiș University Press."
   - id: "Murillo-Fuentes and Alba 2018"
     full: "Murillo-Fuentes, J. J., and L. Alba. 2018. “Thread Counting in X-Rays of Plain-Weave Painting Canvas.” In *Advanced Characterization Techniques: Diagnostic Tools and Evaluation Methods in Heritage Science,* edited by David M. Bastidas and Emilio Cano, chapter 7. Cham, Germany: Springer."
