Remove page-level bibliographies

--- a/content/_data/config.yaml
+++ b/content/_data/config.yaml
@@ -35,6 +35,6 @@ params:
   tocType: full
 
 bibliography:
-  displayOnPage: true
+  displayOnPage: false
   displayShort: true
   heading: Bibliography
