--- a/content/_data/config.yaml
+++ b/content/_data/config.yaml
@@ -15,6 +15,8 @@ disableKinds:
   - taxonomy
   - term
 
+quire_credit_line: "This publication was created using Quire™, a multiformat publishing tool from Getty."
+
 params:
   citationPageLocationDivider: ', '
   citationPopupStyle: text # text | icon
