--- a/content/_data/publication.yaml
+++ b/content/_data/publication.yaml
@@ -1,5 +1,3 @@
---- # ------------------------------------------------------------------------------
-
 # ==============================================================================
 # Publication.yml
 # ------------------------------------------------------------------------------
@@ -31,13 +29,27 @@ pub_type: book # book | journal-periodical | other
 
 identifier:
   isbn: "978-1-60606-825-0"
-  url: "https://www.getty.edu/publications/conserving-canvas"
+  url: "https://www.getty.edu/publications/conserving-canvas/"
 
 publisher:
   - name: Getty Conservation Institute
     location: Los Angeles
-    url:
+    url: https://www.getty.edu/publications/
     logo: logo-getty.png
+    address: |
+      Getty Publications
+      1200 Getty Center Drive, Suite 500
+      Los Angeles, California 90049-1682
+      [getty.edu/publications/](https://www.getty.edu/publications/)
+
+project_team:
+ - Rachel Barth, *Project Editor*
+ - Leslie Tilley, *Manuscript Editor*
+ - Greg Albers, *Digital Publications Manager*
+ - Kurt Hauser, *Cover Design*
+ - Molly McGeehan, *Production*
+ - Danielle Brink, *Image and Rights Acquisition*
+ - Erin Cecele Dunigan and Chloe Millhauser, *Digital Assistant*
 
 # ------------------------------------------------------------------------------
 # Contributors
@@ -49,14 +61,17 @@ contributor:
   - id: "cschwarz"
     first_name: "Cynthia"
     last_name: "Schwarz"
+    type: primary
     bio: "Cynthia Schwarz is senior associate conservator Yale University Art Gallery."
   - id: "imcclure"
     first_name: "Ian"
     last_name: "McClure"
+    type: primary
     bio: "Ian McClure was formerly senior director of the Institute for the Preservation of Cultural Heritage and the Susan Morse Hilles Chief Conservator, Yale University Art Gallery."
   - id: "jcoddington"
     first_name: "Jim"
     last_name: "Coddington"
+    type: primary
     bio: "Jim Coddington is retired chief conservator, Museum of Modern Art, New York."
 
 
@@ -70,7 +85,7 @@ license:
   name: Creative Commons Attribution-NonCommercial 4.0 International License
   abbreviation: CC BY-NC
   url: https://creativecommons.org/licenses/by-nc/4.0/
-  scope: full # full | text-only | some-exceptions
+  scope: text-only # full | text-only | some-exceptions
 
 # ------------------------------------------------------------------------------
 # Formats, Resources & Links
@@ -78,20 +93,20 @@ license:
 
 resource_link:
   - type: other-format
-    name: PDF
+    name: PDF (## MB)
     media_type: application/pdf
     link_relation: alternate
-    url: /downloads/output.pdf
+    url: /downloads/X.pdf
   - type: other-format
-    name: EPUB
+    name: EPUB (## MB)
     media_type: application/epub+zip
     link_relation: alternate
-    url: /downloads/output.epub
+    url: /downloads/X.epub
   - type: other-format
     name: Paperback
     media_type: print
     link_relation: alternate
-    url:
+    url: https://shop.getty.edu/products/X
   - type: footer-link
     name: About
     link_relation: about
@@ -99,12 +114,11 @@ resource_link:
   - type: footer-link
     name: Privacy Policy
     link_relation: privacy-policy
-    url:
+    url: https://www.getty.edu/legal/privacy.html
   - type: footer-link
     name: Terms of Use
     link_relation: terms-of-service
-    url:
-
+    url: https://www.getty.edu/legal/copyright.html
 # ------------------------------------------------------------------------------
 # Subjects
 # ------------------------------------------------------------------------------
@@ -113,30 +127,30 @@ subject:
   - type:
     name:
     identifer:
-  - type:
-    name:
-    identifier:
-  - type:
-    name:
-  - type:
-    name:
-    identifier:
-  - type:
-    name:
-    identifier:
-  - type:
-    name:
-    identifier:
+
+library_of_congress_cip: |
+  Library of Congress Cataloging-in-Publication Data
+  - Names:
+  - Title:
+  - Description:
+  - Identifiers:
+  - Subjects:
+  - Classification:
+  - LC record available at ...
+  - LC ebook record available at ...
 
 # ------------------------------------------------------------------------------
 # Revision History
 # ------------------------------------------------------------------------------
 
 revision_history:
-  - date:
+  - date: July 25, 2023
     summary:
+      - First edition
 
-repository_url:
+revision_statement: "Any revisions or corrections made to this publication after the first edition date will be listed here and in the project repository at [github.com/thegetty/conserving-canvas](https://github.com/thegetty/conserving-canvas), where a more detailed version history is available. The revisions branch of the project repository, when present, will show any changes currently under consideration but not yet published here."
+
+repository_url: https://github.com/thegetty/conserving-canvas
 
 # ------------------------------------------------------------------------------
 # Promo Image
